--- a/espresso/espresso-product/templates/deployment.yaml
+++ b/espresso/espresso-product/templates/deployment.yaml
@@ -30,9 +30,13 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          envFrom:
-          - secretRef:
-               name: {{ .Values.postgres-ha.name }}
+          env:
+            - name: {{ .Values.postgresql.name }}
+              value: {{ .Values.postgresql.value }}
+
+          #envFrom:
+          #- secretRef:
+          #     name: {{ .Values.postgresha.name }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
