--- a/espresso/espresso-product/templates/secret.yaml
+++ b/espresso/espresso-product/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.postgres-ha.name }}
+  name: {{ .Values.postgresha.name }}
 type: Opaque
 data:
-  username: {{ .Values.postgres-ha.username }}
-  password: {{ .Values.postgres-ha.password }}
-  database: {{ .Values.postgres-ha.database }}
+  username: {{ .Values.postgresha.username }}
+  password: {{ .Values.postgresha.password }}
+  database: {{ .Values.postgresha.database }}
